--- a/life-and-money.html
+++ b/life-and-money.html
@@ -7,152 +7,158 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #0b1220;
-      --card: #121a2f;
-      --accent: #22c55e;
-      --accent2: #38bdf8;
-      --warn: #f59e0b;
-      --danger: #ef4444;
-      --text: #e5e7eb;
-      --muted: #94a3b8;
+      --bg:#0b1220;--card:#121a2f;--accent:#22c55e;--accent2:#38bdf8;--warn:#f59e0b;--danger:#ef4444;--text:#e5e7eb;--muted:#94a3b8;
     }
-    * { box-sizing: border-box; font-family: 'Inter', system-ui, sans-serif; }
-    body { margin: 0; background: radial-gradient(circle at top, #111827, #020617); color: var(--text); }
-    header { padding: 24px 16px; text-align: center; }
-    header h1 { margin: 0; font-size: 1.8rem; font-weight: 700; }
-    header p { margin: 8px 0 0; color: var(--muted); font-size: 0.95rem; }
-    main { padding: 16px; max-width: 1200px; margin: auto; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 16px; }
-    .card { background: linear-gradient(180deg, #0f172a, #020617); border-radius: 18px; padding: 16px; box-shadow: 0 20px 40px rgba(0,0,0,.45); }
-    .card h2 { font-size: 1.1rem; margin-bottom: 10px; }
-    label { font-size: 0.75rem; color: var(--muted); }
-    input { width: 100%; padding: 10px; margin: 6px 0 10px; border-radius: 12px; border: 1px solid #1e293b; background: #020617; color: var(--text); }
-    button { padding: 12px 18px; border-radius: 14px; border: none; cursor: pointer; background: linear-gradient(135deg, var(--accent), #16a34a); color: #022c22; font-weight: 700; }
-    .metric { font-size: 0.9rem; margin: 6px 0; }
-    .pill { padding: 6px 12px; border-radius: 999px; font-size: 0.75rem; display: inline-block; margin-top: 6px; }
-    .good { background: rgba(34,197,94,.15); color: #86efac; }
-    .warn { background: rgba(245,158,11,.15); color: #fde68a; }
-    .bad { background: rgba(239,68,68,.15); color: #fecaca; }
-    .section-title { margin-top: 24px; margin-bottom: 10px; font-weight: 600; color: var(--accent2); }
-    footer { padding: 20px; text-align: center; color: var(--muted); font-size: 0.8rem; }
+    *{box-sizing:border-box;font-family:'Inter',system-ui,sans-serif}
+    body{margin:0;background:radial-gradient(circle at top,#111827,#020617);color:var(--text)}
+    header{text-align:center;padding:24px}
+    header h1{margin:0;font-size:1.8rem}
+    header p{color:var(--muted)}
+    main{max-width:1200px;margin:auto;padding:16px}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:16px}
+    .card{background:linear-gradient(180deg,#0f172a,#020617);border-radius:18px;padding:16px;box-shadow:0 20px 40px rgba(0,0,0,.45)}
+    h2{font-size:1.1rem;margin-bottom:10px}
+    label{font-size:.75rem;color:var(--muted)}
+    input,select{width:100%;padding:10px;margin:6px 0 10px;border-radius:12px;border:1px solid #1e293b;background:#020617;color:var(--text)}
+    button{padding:12px 18px;border-radius:14px;border:none;background:linear-gradient(135deg,var(--accent),#16a34a);font-weight:700;cursor:pointer}
+    .pill{padding:6px 12px;border-radius:999px;font-size:.75rem;display:inline-block;margin-top:6px}
+    .good{background:rgba(34,197,94,.15);color:#86efac}
+    .warn{background:rgba(245,158,11,.15);color:#fde68a}
+    .bad{background:rgba(239,68,68,.15);color:#fecaca}
+    .section-title{margin-top:26px;color:var(--accent2)}
+    footer{text-align:center;padding:20px;color:var(--muted);font-size:.8rem}
   </style>
 </head>
 <body>
 
 <header>
   <h1>Life & Money</h1>
-  <p>Advanced Budgeting Simulator · Design, test, and improve your financial life</p>
+  <p>Advanced Budgeting Simulator · Realistic, flexible, insightful</p>
 </header>
 
 <main>
 
 <div class="card">
-  <h2>How to Use This Simulator</h2>
-  <p class="metric">This is a safe financial sandbox. Adjust income, expenses, savings, and investments. There is no perfect answer — only better awareness.</p>
-</div>
-
-<h3 class="section-title">1. Income</h3>
-<div class="grid">
-  <div class="card">
-    <label>Primary Salary</label>
-    <input type="number" class="income" value="40000">
-    <label>Side Income</label>
-    <input type="number" class="income" value="5000">
-    <label>Other Income</label>
-    <input type="number" class="income" value="0">
+  <h2>Profile Settings</h2>
+  <div class="grid">
+    <div>
+      <label>Life Stage</label>
+      <select id="lifeStage">
+        <option>Student</option>
+        <option>Early Career</option>
+        <option>Family</option>
+        <option>Pre-Retirement</option>
+      </select>
+    </div>
+    <div>
+      <label>Risk Tolerance</label>
+      <select id="risk">
+        <option>Low</option>
+        <option>Medium</option>
+        <option>High</option>
+      </select>
+    </div>
   </div>
 </div>
 
-<h3 class="section-title">2. Expenses (Needs & Wants)</h3>
+<h3 class="section-title">1. Income Sources</h3>
+<div class="grid">
+  <div class="card">
+    <label>Primary Salary</label><input type="number" class="income" value="40000">
+    <label>Side Hustle</label><input type="number" class="income" value="6000">
+    <label>Business / Freelance</label><input type="number" class="income" value="0">
+    <label>Passive Income</label><input type="number" class="income" value="0">
+  </div>
+</div>
+
+<h3 class="section-title">2. Expenses – Detailed</h3>
 <div class="grid">
   <div class="card">
     <h2>Needs</h2>
-    <label>Housing</label><input type="number" class="expense need" value="12000">
+    <label>Rent / EMI</label><input type="number" class="expense need" value="12000">
     <label>Utilities</label><input type="number" class="expense need" value="3000">
-    <label>Food</label><input type="number" class="expense need" value="6000">
+    <label>Groceries</label><input type="number" class="expense need" value="6000">
     <label>Transport</label><input type="number" class="expense need" value="4000">
+    <label>Healthcare / Insurance</label><input type="number" class="expense need" value="2000">
   </div>
   <div class="card">
     <h2>Wants</h2>
-    <label>Clothing</label><input type="number" class="expense want" value="2500">
+    <label>Dining Out</label><input type="number" class="expense want" value="2000">
+    <label>Shopping</label><input type="number" class="expense want" value="2500">
     <label>Entertainment</label><input type="number" class="expense want" value="2000">
     <label>Subscriptions</label><input type="number" class="expense want" value="800">
-    <label>Travel / Leisure</label><input type="number" class="expense want" value="1500">
+    <label>Travel & Leisure</label><input type="number" class="expense want" value="1500">
   </div>
 </div>
 
-<h3 class="section-title">3. Savings & Investments</h3>
+<h3 class="section-title">3. Savings & Investments (Advanced)</h3>
 <div class="grid">
   <div class="card">
-    <label>Emergency Fund</label><input type="number" class="saving" value="3000">
-    <label>Fixed Deposit</label><input type="number" class="saving" value="4000">
-    <label>Gold</label><input type="number" class="saving" value="2000">
-    <label>Equity / Mutual Funds</label><input type="number" class="saving" value="5000">
-    <label>Retirement (PPF / NPS)</label><input type="number" class="saving" value="2500">
+    <label>Emergency Fund</label><input type="number" class="saving safe" value="3000">
+    <label>Fixed Deposit</label><input type="number" class="saving safe" value="4000">
+    <label>Gold</label><input type="number" class="saving safe" value="2000">
+    <label>Mutual Funds</label><input type="number" class="saving growth" value="4000">
+    <label>Direct Stocks</label><input type="number" class="saving growth" value="2000">
+    <label>Retirement (PPF / NPS)</label><input type="number" class="saving retirement" value="2500">
   </div>
 </div>
 
-<h3 class="section-title">4. Analysis</h3>
+<h3 class="section-title">4. Financial Goals</h3>
+<div class="grid">
+  <div class="card">
+    <label>Short-Term Goals (1–3 yrs)</label><input type="number" value="2000" id="shortGoal">
+    <label>Mid-Term Goals (3–7 yrs)</label><input type="number" value="3000" id="midGoal">
+    <label>Long-Term Goals (7+ yrs)</label><input type="number" value="5000" id="longGoal">
+  </div>
+</div>
+
+<h3 class="section-title">5. Analysis</h3>
 <div class="card">
   <button onclick="analyzeBudget()">Run Budget Analysis</button>
-  <div id="analysis" style="display:none; margin-top:12px;">
-    <p class="metric">Total Income: <strong id="totalIncome"></strong></p>
-    <p class="metric">Total Expenses: <strong id="totalExpenses"></strong></p>
-    <p class="metric">Needs vs Wants Ratio: <strong id="nwRatio"></strong></p>
-    <p class="metric">Total Savings: <strong id="totalSavings"></strong></p>
-    <p class="metric">Savings Ratio: <strong id="savingRatio"></strong></p>
-    <p class="metric">Net Balance: <strong id="balance"></strong></p>
+  <div id="analysis" style="display:none;margin-top:12px">
+    <p>Total Income: <strong id="totalIncome"></strong></p>
+    <p>Total Expenses: <strong id="totalExpenses"></strong></p>
+    <p>Total Savings: <strong id="totalSavings"></strong></p>
+    <p>Net Balance: <strong id="balance"></strong></p>
+    <p>Savings Ratio: <strong id="savingRatio"></strong></p>
+    <p>Needs vs Wants: <strong id="nwRatio"></strong></p>
     <span id="status" class="pill"></span>
-    <p id="advice" class="metric"></p>
+    <p id="advice"></p>
   </div>
-</div>
-
-<div class="card" style="margin-top:20px;">
-  <h2>What This Teaches</h2>
-  <ul class="metric">
-    <li>Difference between needs and wants</li>
-    <li>Importance of diversification in savings</li>
-    <li>Impact of lifestyle inflation</li>
-    <li>Why high income alone doesn’t mean stability</li>
-  </ul>
 </div>
 
 </main>
 
-<footer>
-  Built to reflect real financial life — not fantasy outcomes.
-</footer>
+<footer>Real money decisions. Zero risk.</footer>
 
 <script>
-function sum(selector) {
-  return [...document.querySelectorAll(selector)].reduce((a,b)=>a+Number(b.value||0),0);
-}
+function sum(sel){return [...document.querySelectorAll(sel)].reduce((a,b)=>a+Number(b.value||0),0)}
 
-function analyzeBudget() {
-  const income = sum('.income');
-  const expenses = sum('.expense');
-  const needs = sum('.need');
-  const wants = sum('.want');
-  const savings = sum('.saving');
-  const balance = income - expenses - savings;
-  const savingRatio = income ? Math.round((savings/income)*100) : 0;
-  const nwRatio = expenses ? Math.round((needs/expenses)*100) : 0;
+function analyzeBudget(){
+  const income=sum('.income');
+  const expenses=sum('.expense');
+  const needs=sum('.need');
+  const wants=sum('.want');
+  const savings=sum('.saving');
+  const balance=income-expenses-savings;
+  const savingRatio=income?Math.round((savings/income)*100):0;
+  const nwRatio=expenses?Math.round((needs/expenses)*100):0;
 
   document.getElementById('analysis').style.display='block';
   document.getElementById('totalIncome').innerText=`₹${income}`;
   document.getElementById('totalExpenses').innerText=`₹${expenses}`;
   document.getElementById('totalSavings').innerText=`₹${savings}`;
-  document.getElementById('savingRatio').innerText=`${savingRatio}%`;
   document.getElementById('balance').innerText=`₹${balance}`;
+  document.getElementById('savingRatio').innerText=`${savingRatio}%`;
   document.getElementById('nwRatio').innerText=`${nwRatio}% needs`;
 
   const status=document.getElementById('status');
   const advice=document.getElementById('advice');
 
-  if(balance<0){status.className='pill bad';status.innerText='Financial Stress';advice.innerText='You are overspending or oversaving. This budget is not sustainable.';}
-  else if(savingRatio<20){status.className='pill warn';status.innerText='Low Resilience';advice.innerText='Increase savings to handle emergencies and future goals.';}
-  else if(nwRatio<60){status.className='pill warn';status.innerText='Lifestyle Heavy';advice.innerText='Too much spending on wants. Long-term goals may suffer.';}
-  else{status.className='pill good';status.innerText='Balanced Budget';advice.innerText='This is a healthy and realistic financial structure.';}
+  if(balance<0){status.className='pill bad';status.innerText='Over Budget';advice.innerText='Your commitments exceed income. Reduce expenses or savings.'}
+  else if(savingRatio<20){status.className='pill warn';status.innerText='Low Savings';advice.innerText='Increase savings to build resilience.'}
+  else if(nwRatio<60){status.className='pill warn';status.innerText='High Lifestyle Spend';advice.innerText='Wants are dominating your budget.'}
+  else{status.className='pill good';status.innerText='Well Balanced';advice.innerText='Your budget is diversified and sustainable.'}
 }
 </script>
 
