--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
 </div>
 
-<h3 class="section-title">2. Expenses – Detailed</h3>
+<h3 class="section-title">2. Expenses</h3>
 <div class="grid">
   <div class="card">
     <h2>Needs</h2>
@@ -91,7 +91,7 @@
   </div>
 </div>
 
-<h3 class="section-title">3. Savings & Investments (Advanced)</h3>
+<h3 class="section-title">3. Savings & Investments</h3>
 <div class="grid">
   <div class="card">
     <label>Emergency Fund</label><input type="number" class="saving safe" value="3000">
