--- a/index.html
+++ b/index.html
@@ -3,223 +3,117 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Life & Money – Advanced Budgeting Simulator</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <style>
-    :root{--bg:#0b1220;--card:#121a2f;--accent:#22c55e;--accent2:#38bdf8;--warn:#f59e0b;--danger:#ef4444;--text:#e5e7eb;--muted:#94a3b8}
-    *{box-sizing:border-box;font-family:'Inter',system-ui,sans-serif}
-    body{margin:0;background:radial-gradient(circle at top,#111827,#020617);color:var(--text)}
-    header{text-align:center;padding:24px}
-    header h1{margin:0;font-size:1.8rem}
-    header p{color:var(--muted)}
-    main{max-width:1200px;margin:auto;padding:16px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:16px}
-    .card{background:linear-gradient(180deg,#0f172a,#020617);border-radius:18px;padding:16px;box-shadow:0 20px 40px rgba(0,0,0,.45)}
-    h2{font-size:1.1rem;margin-bottom:10px}
-    label{font-size:.75rem;color:var(--muted)}
-    input,select{width:100%;padding:10px;margin:6px 0 10px;border-radius:12px;border:1px solid #1e293b;background:#020617;color:var(--text)}
-    .empty{border-color:var(--danger)}
-    button{padding:12px 18px;border-radius:14px;border:none;background:linear-gradient(135deg,var(--accent),#16a34a);font-weight:700;cursor:pointer}
-    .pill{padding:6px 12px;border-radius:999px;font-size:.75rem;display:inline-block;margin-top:6px}
-    .good{background:rgba(34,197,94,.15);color:#86efac}
-    .warn{background:rgba(245,158,11,.15);color:#fde68a}
-    .bad{background:rgba(239,68,68,.15);color:#fecaca}
-    .section-title{margin-top:26px;color:var(--accent2)}
-    .hint{color:var(--muted);font-size:.75rem}
-    footer{text-align:center;padding:20px;color:var(--muted);font-size:.8rem}
+  <title>Life & Money – Budgeting Simulator</title>
 
-    /* Loader */
-    .loader-wrap{display:none;justify-content:center;align-items:center;margin-top:14px}
-    .loader{width:36px;height:36px;border:4px solid #1e293b;border-top:4px solid var(--accent);border-radius:50%;animation:spin 1s linear infinite}
-    @keyframes spin{to{transform:rotate(360deg)}}
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
 <header>
   <h1>Life & Money</h1>
-  <p>Advanced Budgeting Simulator · Realistic, flexible, insightful</p>
+  <p>Design your budget · Learn by seeing</p>
 </header>
 
 <main>
 
-<div class="card">
-  <h2>Profile Settings</h2>
+<section>
+  <h3>1. Income</h3>
+  <div class="card">
+    <label>Active Income</label>
+    <input type="number" class="income" value="40000">
+    <label>Passive Income</label>
+    <input type="number" class="income" value="2000">
+  </div>
+</section>
+
+<section>
+  <h3>2. Expenses</h3>
   <div class="grid">
-    <div>
-      <label>Life Stage</label>
-      <select id="lifeStage">
-        <option>Early Career</option>
-        <option>Student</option>
-        <option>Family</option>
-        <option>Pre-Retirement</option>
-      </select>
+    <div class="card">
+      <h4>Needs</h4>
+      <label>Rent / EMI</label><input type="number" class="expense need" value="12000">
+      <label>Utilities</label><input type="number" class="expense need" value="3000">
+      <label>Groceries</label><input type="number" class="expense need" value="6000">
+      <label>Transport</label><input type="number" class="expense need" value="4000">
+      <label>Healthcare</label><input type="number" class="expense need" value="2000">
     </div>
-    <div>
-      <label>Risk Tolerance</label>
-      <select id="risk">
-        <option>Medium</option>
-        <option>Low</option>
-        <option>High</option>
-      </select>
+
+    <div class="card">
+      <h4>Wants</h4>
+      <label>Dining</label><input type="number" class="expense want" value="2000">
+      <label>Shopping</label><input type="number" class="expense want" value="2500">
+      <label>Entertainment</label><input type="number" class="expense want" value="2000">
+      <label>Subscriptions</label><input type="number" class="expense want" value="800">
+      <label>Travel</label><input type="number" class="expense want" value="1500">
     </div>
   </div>
-</div>
+</section>
 
-<h3 class="section-title">1. Income Sources</h3>
-<div class="grid">
-  <div class="card">
-    <label>Primary Salary</label><input type="number" class="income" value="40000">
-    <label>Side Hustle</label><input type="number" class="income" value="5000">
-    <label>Business / Freelance</label><input type="number" class="income" value="3000">
-    <label>Passive Income</label><input type="number" class="income" value="2000">
-    <p class="hint">Tip: Passive income improves long-term stability</p>
-  </div>
-</div>
-
-<h3 class="section-title">2. Expenses</h3>
-<div class="grid">
-  <div class="card">
-    <h2>Needs</h2>
-    <label>Rent / EMI</label><input type="number" class="expense need" value="12000">
-    <label>Utilities</label><input type="number" class="expense need" value="3000">
-    <label>Groceries</label><input type="number" class="expense need" value="6000">
-    <label>Transport</label><input type="number" class="expense need" value="4000">
-    <label>Healthcare / Insurance</label><input type="number" class="expense need" value="2000">
-  </div>
-  <div class="card">
-    <h2>Wants</h2>
-    <label>Dining Out</label><input type="number" class="expense want" value="2000">
-    <label>Shopping</label><input type="number" class="expense want" value="2500">
-    <label>Entertainment</label><input type="number" class="expense want" value="2000">
-    <label>Subscriptions</label><input type="number" class="expense want" value="800">
-    <label>Travel & Leisure</label><input type="number" class="expense want" value="1500">
-  </div>
-</div>
-
-<h3 class="section-title">3. Savings & Investments</h3>
-<div class="grid">
+<section>
+  <h3>3. Savings</h3>
   <div class="card">
     <label>Emergency Fund</label><input type="number" class="saving" value="3000">
     <label>Fixed Deposit</label><input type="number" class="saving" value="4000">
     <label>Gold</label><input type="number" class="saving" value="2000">
     <label>Mutual Funds</label><input type="number" class="saving" value="4000">
-    <label>Direct Stocks</label><input type="number" class="saving" value="2000">
-    <label>Retirement (PPF / NPS)</label><input type="number" class="saving" value="2500">
-    <p class="hint">Balanced mix = safety + growth</p>
+    <label>Stocks</label><input type="number" class="saving" value="2000">
   </div>
-</div>
+</section>
 
-<h3 class="section-title">4. Financial Goals</h3>
-<div class="grid">
-  <div class="card">
-    <label>Short-Term Goals (1–3 yrs)</label><input type="number" id="shortGoal" value="2000">
-    <label>Mid-Term Goals (3–7 yrs)</label><input type="number" id="midGoal" value="3000">
-    <label>Long-Term Goals (7+ yrs)</label><input type="number" id="longGoal" value="5000">
-  </div>
-</div>
-
-<h3 class="section-title">5. Analysis</h3>
-<div class="card">
-  <button onclick="analyzeBudget()">Run Budget Analysis</button>
-  <div class="loader-wrap" id="loader"><div class="loader"></div></div>
-  <p id="error" class="hint"></p>
-  <div id="analysis" style="display:none;margin-top:12px">
-    <p>Total Income: <strong id="totalIncome"></strong></p>
-    <p>Total Expenses: <strong id="totalExpenses"></strong></p>
-    <p>Total Savings: <strong id="totalSavings"></strong></p>
-    <p>Net Balance: <strong id="balance"></strong></p>
-    <p>Savings Ratio: <strong id="savingRatio"></strong></p>
-    <p>Needs vs Wants: <strong id="nwRatio"></strong></p>
-    <span id="status" class="pill"></span>
-    <p id="advice"></p>
-  </div>
-</div>
+<section>
+  <button onclick="runAnalysis()">Run Budget Analysis</button>
+  <div class="loader" id="loader"></div>
+  <p class="error" id="error"></p>
+</section>
 
 </main>
 
-<footer>Real money decisions. Zero risk.</footer>
-
 <script>
-// Utility: sum values safely
-function sum(sel){
-  return [...document.querySelectorAll(sel)]
-    .reduce((a,b)=>a+Number(b.value||0),0)
-}
+const sum = sel => [...document.querySelectorAll(sel)]
+  .reduce((a,b)=>a+Number(b.value||0),0)
 
-// Validate that all numeric inputs are filled and non-negative
-function validateInputs(){
-  let valid=true
-  const inputs=[...document.querySelectorAll('input[type="number"]')]
-  inputs.forEach(i=>{
+const validate = () => {
+  let ok = true
+  document.querySelectorAll('input').forEach(i=>{
     if(i.value===''||Number(i.value)<0){
-      i.classList.add('empty')
-      valid=false
-    }else{
-      i.classList.remove('empty')
-    }
+      i.classList.add('error-input')
+      ok=false
+    } else i.classList.remove('error-input')
   })
-  return valid
+  return ok
 }
 
-function analyzeBudget(){
-  const error=document.getElementById('error')
-  const loader=document.getElementById('loader')
-  const analysis=document.getElementById('analysis')
-
+function runAnalysis(){
+  const loader = document.getElementById('loader')
+  const error = document.getElementById('error')
   error.innerText=''
-  analysis.style.display='none'
-
-  // show loader
-  loader.style.display='flex'
+  loader.style.display='block'
 
   setTimeout(()=>{
-    if(!validateInputs()){
+    if(!validate()){
       loader.style.display='none'
-      error.innerText='All fields are mandatory. Please enter a value (0 allowed) in highlighted fields.'
+      error.innerText='All fields are mandatory (0 allowed).'
       return
     }
 
     const income=sum('.income')
-    const expenses=sum('.expense')
     const needs=sum('.need')
+    const expenses=sum('.expense')
+    const wants=expenses-needs
     const savings=sum('.saving')
 
-    const balance=income-expenses-savings
-    const savingRatio=income?Math.round((savings/income)*100):0
-    const nwRatio=expenses?Math.round((needs/expenses)*100):0
-
-    document.getElementById('totalIncome').innerText=`₹${income}`
-    document.getElementById('totalExpenses').innerText=`₹${expenses}`
-    document.getElementById('totalSavings').innerText=`₹${savings}`
-    document.getElementById('balance').innerText=`₹${balance}`
-    document.getElementById('savingRatio').innerText=`${savingRatio}%`
-    document.getElementById('nwRatio').innerText=`${nwRatio}% needs`
-
-    const status=document.getElementById('status')
-    const advice=document.getElementById('advice')
-
-    if(balance<0){
-      status.className='pill bad'
-      status.innerText='Over Budget'
-      advice.innerText='Your commitments exceed income. Reduce expenses or savings.'
-    }else if(savingRatio<20){
-      status.className='pill warn'
-      status.innerText='Low Savings'
-      advice.innerText='Increase savings to build emergency and future security.'
-    }else if(nwRatio<60){
-      status.className='pill warn'
-      status.innerText='High Lifestyle Spend'
-      advice.innerText='Wants are dominating your budget. Consider rebalancing.'
-    }else{
-      status.className='pill good'
-      status.innerText='Well Balanced'
-      advice.innerText='Your budget is diversified, realistic, and sustainable.'
+    const data={
+      income, needs, wants, savings,
+      balance: income-expenses-savings,
+      needsPct: Math.round(needs/income*100),
+      wantsPct: Math.round(wants/income*100),
+      savingsPct: Math.round(savings/income*100)
     }
 
-    loader.style.display='none'
-    analysis.style.display='block'
-  },800)
+    sessionStorage.setItem('budgetData',JSON.stringify(data))
+    window.location.href='analysis.html'
+  },700)
 }
 </script>
 
